Fix z-index bug in sidebar and clean up _miscelaneous.less

--- a/public/assets/src/opennemas-webarch/less/base/_base.less
+++ b/public/assets/src/opennemas-webarch/less/base/_base.less
@@ -1,5 +1,7 @@
 body {
+  background-color: rgb(229, 233, 236) !important;
   min-height: 100%;
+  overflow-y: scroll; /*hidden*/
 
   & > .overlay {
     opacity: 0;
@@ -21,6 +23,10 @@ body {
   margin-top: 9px;
   position: absolute;
   text-shadow: 0 0 1px #000;
+}
+
+.nojs {
+  margin-top: 100px;
 }
 
 @media (max-width: (@tablet-width - 1)) {
