--- a/public/assets/src/opennemas-webarch/less/base/_reset.less
+++ b/public/assets/src/opennemas-webarch/less/base/_reset.less
@@ -1,8 +1,3 @@
-body {
-  background-color: rgb(229, 233, 236) !important;
-  overflow-y: scroll; /*hidden*/
-}
-
 [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none !important;
 }
