--- a/public/assets/src/opennemas-webarch/less/helpers/_variables.less
+++ b/public/assets/src/opennemas-webarch/less/helpers/_variables.less
@@ -19,8 +19,8 @@
 
 // Theme Colors
 @background-color: #e5e9ec;
-@border-color: #ddd;
-@default-color: #d1dade;
+@border-color: #d1dade;
+@default-color: #505458;
 @error-color: #f35958;
 @info-color: #0090d9;
 @primary-color: #376092;
