--- a/public/assets/src/opennemas-webarch/less/layout/_content.less
+++ b/public/assets/src/opennemas-webarch/less/layout/_content.less
@@ -1,10 +1,11 @@
 .page-container {
   height: auto;
   margin: 0;
+  min-height:50%;
+  opacity: .9999; // Create a new stacking context
   overflow-x: hidden;
   padding: 0;
   width: 100%;
-  min-height:50%;
 }
 
 .page-content {
